corrected row gap for books

--- a/app/static/styles/2_books.css
+++ b/app/static/styles/2_books.css
@@ -144,7 +144,7 @@
 }
 @media only screen and (max-width: 641px) {
     .book-grid {
-        gap: 20px 20px;
+        gap: 20px 10px;
     }
 
         .book-title {
